# SubtoolUpdater

./: CMakeLists.txt  LICENSE  README.md
SubtoolUpdater_2022/: SubtoolUpdater_2022.txt
src/: objInfo.cpp  objInfo.hpp
